--- a/titanic/code/build_model.ipynb
+++ b/titanic/code/build_model.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,6 +459,7 @@
     "def print_acc(\n",
     "    y_true: list,\n",
     "    y_pred: list,\n",
+    "    model,\n",
     "):\n",
     "    acc = accuracy_score(y_true=y_true, y_pred=y_pred)\n",
     "    print(\"ホールドアウト法\")\n",
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +504,7 @@
     "y_pred = model.predict(X_valid)\n",
     "y_pred = (y_pred > 0).astype(int)\n",
     "\n",
-    "print_acc(y_true=y_valid, y_pred=y_pred)\n",
+    "print_acc(y_true=y_valid, y_pred=y_pred, model=model)\n",
     "\n",
     "\n",
     "# 精度: 0.7873134328358209"
@@ -511,148 +512,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(891, 10)\n",
-      "(623,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(train.shape)\n",
-    "print(y_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### LightGBM用データ分割"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 239, number of negative: 384\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001167 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 205\n",
-      "[LightGBM] [Info] Number of data points in the train set: 623, number of used features: 8\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.383628 -> initscore=-0.474179\n",
-      "[LightGBM] [Info] Start training from score -0.474179\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "精度: 0.3843283582089552\n"
+      "ホールドアウト法\n",
+      "精度: 0.8134328358208955\n",
+      "\n",
+      "交差検証（分割数:4）\n",
+      "精度: 0.8069981416393972\n"
      ]
     }
    ],
@@ -665,34 +536,21 @@
     "# カテゴリカル変数\n",
     "categorical_cols = [\"Embarked\", \"Pclass\", \"Sex\"]\n",
     "\n",
-    "# モデルのハイパーパラメータ\n",
-    "params = {\n",
-    "    'objective': 'binary',\n",
-    "    'learning_rate': 0.01,\n",
-    "}\n",
-    "\n",
-    "lgb_train = lgb.Dataset(\n",
-    "    X_train,\n",
-    "    y_train,\n",
-    "    categorical_feature=categorical_cols\n",
-    "    )\n",
-    "lgb_eval = lgb.Dataset(\n",
-    "    X_valid,\n",
-    "    y_valid,\n",
-    "    categorical_feature=categorical_cols,\n",
-    "    reference=lgb_train\n",
-    "    )\n",
-    "\n",
-    "model = lgb.train(params, lgb_train,\n",
-    "    valid_sets=[lgb_train, lgb_eval],\n",
+    "# モデルのインスタンス作成\n",
+    "model = lgb.LGBMClassifier(\n",
+    "    objective=\"binary\",\n",
+    "    learning_rate=0.025,\n",
+    "    num_leaves=20,\n",
+    "    max_depth=5,\n",
+    "    verbosity=-1,\n",
     ")\n",
     "\n",
-    "y_pred = model.predict(X_valid, num_iteration=model.best_iteration)\n",
-    "y_pred = (y_pred > 0).astype(int)\n",
+    "# 学習\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
-    "acc = accuracy_score(y_true=y_valid, y_pred=y_pred)\n",
+    "y_pred = model.predict(X_valid)\n",
     "\n",
-    "print(f\"精度: {acc}\")"
+    "print_acc(y_true=y_valid, y_pred=y_pred, model=model)"
    ]
   },
   {
@@ -704,45 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
-       "       0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0,\n",
-       "       1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
-       "       0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1,\n",
-       "       0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
-       "       0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
-       "       1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0,\n",
-       "       0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0,\n",
-       "       1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
-       "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(predictions).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
